Fix humidity text overlapping other modules
This moves the main "circle" display into its own div so the humidity text can
sit beneath it, and converts a lot of the absolute positioning into normal
positioning to let the browser's layout engine encompass everything correctly
into the parent "module-content" div.

Tested in visual and list modes; left and right sides; and in "nest", "protect",
and "both" display modes.

Fixes https://github.com/mochman/MMM-Nest/issues/18

--- a/MMM-Nest.css
+++ b/MMM-Nest.css
@@ -35,11 +35,16 @@
   width: 0;
 }
 
+.MMM-Nest .thermContainer {
+  width: 120px;
+}
+
 .MMM-Nest .humidityText {
-  position:absolute;
   font-size:large;
-  top: 60%;
   width: 100%;
+  width: 120px;
+  text-align: center;
+  padding-top: 5px;
 }
 
 .MMM-Nest .nameText {
@@ -94,9 +99,6 @@
 }
 
 .MMM-Nest .humidityText {
-  top: 0;
-  display: block;
-  margin-top: 135px;
   line-height: 1;
 }
 
@@ -172,8 +174,8 @@
 }
 
 .MMM-Nest .greenBoth {
- position: relative;
- top: -124px;
+ position: absolute;
+ top: -5px;
  left: -4px;
  border: 4px solid #11d611;
  border-radius: 50%;
@@ -210,8 +212,8 @@
 }
 
 .MMM-Nest .yellowBoth {
- position: relative;
- top: -124px;
+ position: absolute;
+ top: -5px;
  left: -4px;
  border: 4px solid #ffbe00;
  border-radius: 50%;
@@ -238,8 +240,8 @@
 }
 
 .MMM-Nest .redBoth {
- position: relative;
- top: -124px;
+ position: absolute;
+ top: -5px;
  left: -4px;
  border: 4px solid #d92a00;
  border-radius: 50%;
